added location links to index html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
-spring.datasource.username=techjobs
-spring.datasource.password=techjobs
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs_d?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
+spring.datasource.username=techjobs_d
+spring.datasource.password=techjobs_d
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
